--- a/src/views/views.login.ejs
+++ b/src/views/views.login.ejs
@@ -13,7 +13,7 @@
                 <h1>BIENVENIDO A ERP</h1>
                 <input type="text" placeholder="Ingrese su correo o usuario">
                 <input type="password" placeholder="Ingrese su contraseña">
-                <p>Recuperar usuario <a href="#">AQUI</a></p>
+                <p>Recuperar usuario <a href="/correo">AQUI</a></p>
                 <input class="boton" type="submit" value="Ingresar">
                 <div class="linea">
                     <span class="line"></span>
