--- a/src/views/views.panel.ejs
+++ b/src/views/views.panel.ejs
@@ -1,4 +1,3 @@
-<!-- Archivo para montar carpeta en Git hub -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apex</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/css/panel.css">
+    <style>
+        .header-row {
+            align-items: center;
+            height: 60px; 
+        }
+        .header-row h1 {
+            margin: 0;
+            line-height: 60px; 
+        }
+        .header-row .btn {
+            line-height: 40px; 
+        }
+        .content {
+            padding-top: 20px; 
+        }
+    </style>
 </head>
 <body>
     <div class="container-fluid">
@@ -20,7 +36,7 @@
                     <div class="d-flex flex-column align-items-center justify-content-center mt-5">
                         <button class="btn btn-primary">Lista de usuarios</button>
                         <button class="btn btn-primary mt-2">Lista de bloqueados</button>
-                        <button class="btn btn-primary mt-2">Logs</button>
+                        <button class="btn btn-primary mt-2">Logs de seguridad</button>
                         <button class="btn btn-primary mt-2">Intentos de acceso</button>
                         <button class="btn btn-primary mt-2">Configuración de acceso</button>
                         <button class="btn btn-primary mt-2">Autenticación de dos factores</button>
@@ -37,14 +53,231 @@
                 </div>
             </div>
             <div class="content col-md-10">
-                <div class="row">
-                    <div class="col-12">dsfsd</div>
-                    <div class="col-12">sdfsdf</div>
+                <div class="row mb-4 header-row">
+                    <div class="col-12 d-flex">
+                        <div class="row w-100">
+                            <div class="col-8">
+                                <h1>Panel de Control usuarios</h1>
+                            </div>
+                            <div class="col-4 d-flex">
+                                <button class="btn btn-primary btn-custom">Agregar Usuario</button>
+                                <!-- Botón para abrir el modal -->
+                                <button type="button" class="btn btn-key btn-sm btn-custom btn-group-custom" data-bs-toggle="modal" data-bs-target="#permissionsModal">
+                                    <i class="fa-solid fa-key"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col-12">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">Nombre</th>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">Apellido</th>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">Celular</th>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">Contraseña</th>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">Rol</th>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">Estado</th>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">Acciones</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="table-active">
+                                <td>Juan</td>
+                                <td>Pérez</td>
+                                <td>555-1234</td>
+                                <td>****</td>
+                                <td>
+                                    <select class="form-select">
+                                        <option value="">Técnico</option>
+                                        <option value="">Secretaria</option>
+                                        <option value="">Cliente</option>
+                                        <option value="Administrador" selected>Programador</option>
+                                    </select>
+                                </td>
+                                <td>Activo</td>
+                                <td>
+                                    <div class="btn-group" role="group">
+                                        <button type="button" class="btn btn-delete btn-sm"><i class="fa-solid fa-trash"></i></button>
+                                        <button type="button" class="btn btn-edit btn-sm"><i class="fa-solid fa-pen"></i></button>
+                                        <button type="button" class="btn btn-key btn-sm"><i class="fa-solid fa-key"></i></button>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>María</td>
+                                <td>González</td>
+                                <td>555-5678</td>
+                                <td>****</td>
+                                <td>
+                                    <select class="form-select">
+                                        <option value="">Técnico</option>
+                                        <option value="">Secretaria</option>
+                                        <option value="">Cliente</option>
+                                        <option value="Administrador" selected>Programador</option>
+                                    </select>
+                                </td>
+                                <td>Inactivo</td>
+                                <td>
+                                    <div class="btn-group" role="group">
+                                        <button type="button" class="btn btn-delete btn-sm"><i class="fa-solid fa-trash"></i></button>
+                                        <button type="button" class="btn btn-edit btn-sm"><i class="fa-solid fa-pen"></i></button>
+                                        <button type="button" class="btn btn-key btn-sm"><i class="fa-solid fa-key"></i></button>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Carlos</td>
+                                <td>López</td>
+                                <td>555-9876</td>
+                                <td>****</td>
+                                <td>
+                                    <select class="form-select">
+                                        <option value="">Técnico</option>
+                                        <option value="">Secretaria</option>
+                                        <option value="">Cliente</option>
+                                        <option value="Administrador" selected>Programador</option>
+                                    </select>
+                                </td>
+                                <td>Activo</td>
+                                <td>
+                                    <div class="btn-group" role="group">
+                                        <button type="button" class="btn btn-delete btn-sm"><i class="fa-solid fa-trash"></i></button>
+                                        <button type="button" class="btn btn-edit btn-sm"><i class="fa-solid fa-pen"></i></button>
+                                        <button type="button" class="btn btn-key btn-sm"><i class="fa-solid fa-key"></i></button>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                
+                <div class="col-12">
+                    <ul class="pagination justify-content-end">
+                        <li class="page-item disabled">
+                            <a class="page-link" href="#" tabindex="-1" aria-disabled="true" 
+                               style="background-image: url('/img/arrow_right.png'); background-size: contain; background-repeat: no-repeat; background-position: center; width: 30px; height: 30px; transform: rotate(180deg);">
+                            </a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link d-flex align-items-center justify-content-center" href="#" 
+                               style="background-color: #1E3DEA; color: white; border-radius: 5px; text-align: center; width: 30px; height: 30px; line-height: 30px; display: inline-block;">
+                               1
+                            </a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link d-flex align-items-center justify-content-center" href="#" 
+                               style="background-color: #1E3DEA; color: white; border-radius: 5px; text-align: center; width: 30px; height: 30px; line-height: 30px; display: inline-block;">
+                               2
+                            </a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link d-flex align-items-center justify-content-center" href="#" 
+                               style="background-color: #1E3DEA; color: white; border-radius: 5px; text-align: center; width: 30px; height: 30px; line-height: 30px; display: inline-block;">
+                               3
+                            </a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link d-flex align-items-center justify-content-center" href="#" 
+                               style="background-image: url('/img/arrow_right.png'); background-size: contain; background-repeat: no-repeat; background-position: center; width: 30px; height: 30px;">
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
-</body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
+    <!-- Modal -->
+    <div class="modal fade" id="permissionsModal" tabindex="-1" aria-labelledby="permissionsModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header modal-header-custom">
+                    <h5 class="modal-title" id="permissionsModalLabel">Permisos para los Usuarios</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>                
+                <div class="modal-body">
+                    <p>Selecciona los opciones que deseas activar o desactivar para los usuarios:</p>
+                    <div class="permissions-list">
+                        <div class="permission-item">
+                            <label for="option1">Lista de Usuarios</label>
+                            <div class="switch-container">
+                                <div class="switch">
+                                    <input type="checkbox" id="option1" class="switch-input">
+                                    <label for="option1" class="switch-label">
+                                        <div class="switch-slider"></div>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="permission-item">
+                            <label for="option2">Lista de Bloqueos</label>
+                            <div class="switch-container">
+                                <div class="switch">
+                                    <input type="checkbox" id="option2" class="switch-input">
+                                    <label for="option2" class="switch-label">
+                                        <div class="switch-slider"></div>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="permission-item">
+                            <label for="option3">Logs de Seguridad</label>
+                            <div class="switch-container">
+                                <div class="switch">
+                                    <input type="checkbox" id="option3" class="switch-input">
+                                    <label for="option3" class="switch-label">
+                                        <div class="switch-slider"></div>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="permission-item">
+                            <label for="option4">Intentos de Acceso</label>
+                            <div class="switch-container">
+                                <div class="switch">
+                                    <input type="checkbox" id="option4" class="switch-input">
+                                    <label for="option4" class="switch-label">
+                                        <div class="switch-slider"></div>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="permission-item">
+                            <label for="option5">Configuración de Acceso</label>
+                            <div class="switch-container">
+                                <div class="switch">
+                                    <input type="checkbox" id="option5" class="switch-input">
+                                    <label for="option5" class="switch-label">
+                                        <div class="switch-slider"></div>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="permission-item">
+                            <label for="option6">Autenticacion de Dos Factores</label>
+                            <div class="switch-container">
+                                <div class="switch">
+                                    <input type="checkbox" id="option6" class="switch-input">
+                                    <label for="option6" class="switch-label">
+                                        <div class="switch-slider"></div>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Actualizar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+    <script src="/js/permisos.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
 </html>
