--- a/src/views/views.panel.ejs
+++ b/src/views/views.panel.ejs
@@ -22,7 +22,7 @@
                             <span class="text-start">Ajustes</span>
                             <img class="dropdown-arrow" src="/img/angulo-hacia-abajo 1.png" alt="">
                         </button>
-                        <div id="settings-dropdown" style="display: none; flex-direction: column; background-color: #4961E4; height: auto;">
+                        <div id="settings-dropdown" style="display: none; flex-direction: column; background-color: #4961E4; height: auto; width: 100%;">
                             <button class="btn btn-secondary text-start">Cuenta</button>
                             <button class="btn btn-secondary text-start">Plataforma</button>
                             <button class="btn btn-secondary text-start">Autenticación de dos factores</button>
