corrijo estilos css de preguntas de seguridad

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,86 +1,75 @@
-    body {
+body {
     font-family: sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f2f2f2;
-    }
+}
 
-    header {
-    height: 20%;
+nav {
+    height: 10vh;
     background-color: #394DC0;
     color: white;
     padding: 1%;
     text-align: left;
+}
 
-    }
+header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
-    .container {
-        width: 50%;
-        margin: 20px 10%;
-        padding: 20px;
-        border-radius: 5px;
-    }
 
-    h1 { 
-        margin-bottom: 20px;
-    }
+input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    box-sizing: border-box;
+}
 
-    h2{
-        font-size: medium;
-    }
-
-   .form-group {
-        margin-bottom: 20px;
-    }
-
-    input[type="text"] {
-        width: 100%;
-        padding: 10px;
-        border: 1px solid #ddd;
-        border-radius: 3px;
-        box-sizing: border-box;
-    }
-
-    .header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 20px;
-    }
-
-    .header button {
-        background-color: transparent;
-        border: none;
-        font-size: 20px;
-        cursor: pointer;
-    }
-
-    .blue-box {
-        background-color: #394DC0;
-        color: #fff;
-        padding: 20px;
-        margin-bottom: 20px;
-        border-radius: 10px;
-        width: 95%;
-        height: 20%;
-        font-family: sans-serif;
-    }
-
-   .buttons {
+.header {
     display: flex;
     justify-content: space-between;
-    }
+    align-items: center;
+    margin-bottom: 20px;
+}
 
-    .button1 {
+.header button {
+    background-color: transparent;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.blue-box {
+    background-color: #394DC0;
+    color: #fff;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    width: 50%;
+    font-family: sans-serif;
+    gap: 30px;
+}
+
+.buttons {
+    margin:  20px 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.button1 {
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
     background-color: #404140;
     color: #fff;
     cursor: pointer;
-    }
+}
 
-    .button2 {
+.button2 {
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
