las otras vistas de recuperar usuario

--- a/src/views/views.codigo.ejs
+++ b/src/views/views.codigo.ejs
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/correo.css">
+    <link rel="stylesheet" href="../css/correo.css">
     <title>Correo</title>
 </head>
 <body>
         <div class="caja_segundaria">
             <div class="fondo"></div>
             <div class="formulario">
-                <h1>Ingresa Tu Correo</h1>
-                <input type="text" placeholder="Ingrese su correo">
-                <a class="boton" type="button" value="Enviar">
+                <h1>Ingresa El Codigo</h1>
+                <!-- <p>Ingresa el codigo que llego a tu correo</p> -->
+                <input type="text" placeholder="Ingresa el codigo">
+                <input class="boton" type="button" value="Enviar">
             </div>
         </div>
     </body>
