--- a/src/views/views.condicionesc.ejs
+++ b/src/views/views.condicionesc.ejs
@@ -117,38 +117,38 @@
                     </div>
                 </div>
             </div>
-            <div class="content col-md-10">
+            <div class="content col-md-10" id="section1">
                 <div class="">
                     <div class=" fw-bold mt-3">Duración de los Tokens</div>
-                    <input type="text" class="t1 px-3 rounded border-0 mt-3" placeholder="1" >
-                    <input type="text" class="t2 px-3 rounded border-0 mt-3" placeholder="min" >
+                    <input type="text" class="t1 px-3 rounded border-0 mt-3" placeholder="1" id="tiempoT" >
+                    <input type="text" class="t2 px-3 rounded border-0 mt-3" placeholder="min" id="medidaT">
                     <div class="fw-bold mt-3">Frecuencia Copia de Seguridad</div>
                     <input type="text" class="t3 mx-auto px-3 rounded border-0 mt-3" placeholder="Semanal" >
                     <div class="fw-bold mt-3">Complejidad de las Contraseñas</div>
                         <div class="col d-flex">
                             <div class="mt-4">Cantidad de Caracteres</div>
-                            <input type="text" class="t1 px-3 rounded border-0 mx-3 mt-3" placeholder="1">
+                            <input type="text" class="t1 px-3 rounded border-0 mx-3 mt-3" id="cantC" placeholder="1">
                         </div>
                         <div class="col d-flex">
                             <div class="mt-4">Cantidad Mínima de Minúsculas</div>
-                            <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="1">
+                            <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" id="" placeholder="1" id="cantMin">
                         </div>
                         <div class="col d-flex">
                             <div class="mt-4">Cantidad Mínima de Mayúsculas</div>
-                            <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="1">
+                            <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="1" id="cantMay">
                         </div>
                         <div class="col d-flex">
                             <div class="mt-4">Cantidad Mínima de Números</div>
-                            <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="1">
+                            <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="1" id="cantNum">
                         </div>
                         <div class="col d-flex">
                             <div class="mt-4">Cantidades Especiales</div>
-                            <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="1">
+                            <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="1" id="cantEsp">
                         </div>
                 </div>
 
                 <div class="d-flex-end mt-5">
-                    <button class="btn btn-primary gbtn">Guardar Cambios</button>
+                    <button class="btn btn-primary gbtn" id="btnG">Guardar Cambios</button>
                 </div>
 
             </div>
