--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,3 +1,14 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'fuenteP';
+}
+
+@font-face {
+    font-family: 'fuenteP';
+    src: url(/font/CORBEL.TTF);
+}
+
 body {
     font-family: sans-serif;
     margin: 0;
@@ -53,7 +64,7 @@ nav .image-container img {
 /* flecha */
 
 .arrow{
-    margin-right: 1100px;
+    width: 90%;
 }
 .button {
     display: block;
