--- a/src/views/views.preguntas.seguridad.ejs
+++ b/src/views/views.preguntas.seguridad.ejs
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preguntas de seguridad</title>
-   <link rel="stylesheet" href="/css/style.css">
-</head><!DOCTYPE html>
+    <link rel="stylesheet" href="/css/style.css">
+</head>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -124,91 +125,6 @@
     </div>
 
     <script src="/js/preguntas.seguridad.js"></script>
-</body>
-
-</html>
-
-<body>
-    <nav>
-        <h2>Nombre de usuario</h2>
-
-        <div class="image-container">
-            <!-- CAMPANA -->
-            <div class="notification">
-                <div class="bell-container">
-                    <div class="bell"></div>
-                </div>
-            </div>
-
-            <!-- AJUSTES -->
-            <button class="setting-btn">
-                <span class="bar bar1"></span>
-                <span class="bar bar2"></span>
-                <span class="bar bar1"></span>
-            </button>
-
-            <!-- cerrar sesion -->
-            <button class="Btn">
-                <div class="sign">
-                    <svg viewBox="0 0 512 512">
-                        <path
-                            d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z">
-                        </path>
-                    </svg>
-                </div>
-            </button>
-
-        </div>
-    </nav>
-
-    <header>
-        <div class="arrow">
-            <button class="button">
-                <div class="button-box">
-                    <span class="button-elem">
-                        <svg viewBox="0 0 46 40" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M46 20.038c0-.7-.3-1.5-.8-2.1l-16-17c-1.1-1-3.2-1.4-4.4-.3-1.2 1.1-1.2 3.3 0 4.4l11.3 11.9H3c-1.7 0-3 1.3-3 3s1.3 3 3 3h33.1l-11.3 11.9c-1 1-1.2 3.3 0 4.4 1.2 1.1 3.3.8 4.4-.3l16-17c.5-.5.8-1.1.8-1.9z">
-                            </path>
-                        </svg>
-                    </span>
-                    <span class="button-elem">
-                        <svg viewBox="0 0 46 40">
-                            <path
-                                d="M46 20.038c0-.7-.3-1.5-.8-2.1l-16-17c-1.1-1-3.2-1.4-4.4-.3-1.2 1.1-1.2 3.3 0 4.4l11.3 11.9H3c-1.7 0-3 1.3-3 3s1.3 3 3 3h33.1l-11.3 11.9c-1 1-1.2 3.3 0 4.4 1.2 1.1 3.3.8 4.4-.3l16-17c.5-.5.8-1.1.8-1.9z">
-                            </path>
-                        </svg>
-                    </span>
-                </div>
-            </button>
-
-        </div>
-        <div class="title">
-            <center><h1>Preguntas de seguridad</h1></center>
-            <p>Tus preguntas de seguridad ayudan a mantener tu cuenta segura. Puede usarlos para restablecer su
-                contraseña
-            </p>
-        </div>
-
-        <form class="blue-box">
-            <h3>¿Cuál fue tu primer proyecto o tarea en esta empresa?</h3>
-            <div class="form-group">
-                <label for="first-project">Respuesta</label>
-                <input type="text" id="first-project" name="first-project">
-            </div>
-
-            <h3>¿Cuál fue el nombre de tu primera capacitación o curso en esta empresa?</h3>
-            <div class="form-group">
-                <label for="first-training">Respuesta</label>
-                <input type="text" id="first-training" name="first-training">
-            </div>
-            <div class="buttons">
-                <button type="" class="button1">Agregar otra pregunta</button>
-                <button type="" class="button2">Guardar cambios</button>
-            </div>
-        </form>
-
-    </header>
 </body>
 
 </html>
