--- a/src/views/views.preguntas.seguridad.ejs
+++ b/src/views/views.preguntas.seguridad.ejs
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preguntas de seguridad</title>
-    <link rel="stylesheet" href="/css/preguntas_seguridad.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <nav>
@@ -38,6 +39,7 @@
 
         </div>
     </nav>
+
     <header>
         <div class="arrow">
             <button class="button">
@@ -88,6 +90,7 @@
         </form>
 
     </header>
+
     <!-- Modal Structure -->
     <div id="questionModal" class="modal">
         <div class="modal-content">
@@ -110,7 +113,8 @@
             </form>
         </div>
     </div>
-    
+
     <script src="/js/preguntas.seguridad.js"></script>
 </body>
+
 </html>
