--- a/src/views/views.nuevousuario.ejs
+++ b/src/views/views.nuevousuario.ejs
@@ -4,17 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/correo.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
     <title>Correo</title>
 </head>
 <body>
         <div class="caja_segundaria">
             <div class="fondo"></div>
             <div class="formulario">
-                <h1>Usuario Nuevo</h1>
-                <!-- <p>Ingresa el codigo que llego a tu correo</p> -->
-                <input type="text" placeholder="Nuevo Usuario">
-                <input type="text" placeholder="Ingresa Nuevamente Usuario">
-                <input class="boton" type="button" value="Enviar">
+                <div class="form__comen">
+                    <i class='bx bx-exit' id="volver"></i>                   
+                </div>
+                <div class="form__titulo">
+                    <h1>Ingresar usuario </h1>
+                </div>
+              
+              <div class="form__btn">
+                  <input type="text" placeholder="Digita tu nuevo usuario">
+                  <input type="text" placeholder="Confirma tu usuario">
+                  <input class="boton" type="button" value="Enviar">
+              </div>
             </div>
         </div>
     </body>
+
+</html> 
