se realizo el responsi del login

--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -104,6 +104,23 @@ a{
 .metodos > a > img {
     height: 30px;
     width: 30px;
-    
 }
 
+/* ---------------------------------------------------- RESPONSI ---------------------------------------------------------------------------------------------------------------- */
+
+@media (max-width: 1250px) {
+    .formulario{
+        width: 350px;
+    }
+    input{
+        width: 250px;
+    }
+    .boton{
+        width: 270px;
+    }
+    
+    .line{
+        width: 120px;
+    }
+    
+}
