--- a/src/views/views.login.ejs
+++ b/src/views/views.login.ejs
@@ -14,9 +14,10 @@
                 
                 <input type="text" placeholder="Ingrese su correo o usuario" required>
                 <input type="password" placeholder="Ingrese su contraseña" required>
-                <p>Recuperar usuario <a href="/correo">AQUI</a></p>
-
                 <input class="boton" type="submit" value="Ingresar">
+                <p>Recuperar usuario <a href="/correo">AQUI</a></p>
+                <p>Recuperar contraseña <a href="/correo">AQUI</a></p>
+
                 <div class="linea">
                     <span class="line"></span>
                     <p>O</p>
