--- a/src/public/css/perfil.css
+++ b/src/public/css/perfil.css
@@ -2,6 +2,13 @@
     padding: 0;
     margin: 0;
     font-size: 16px;
+    font-family: 'Corbel';
+
+}
+
+@font-face {
+    font-family: 'Corbel';
+    src: url(../font/CORBEL.TTF);
 }
 nav{
     background-color: #394DC0;
