--- a/src/views/views.registro.ejs
+++ b/src/views/views.registro.ejs
@@ -11,10 +11,11 @@
         <div class="fondo"></div>
         <div class="formulario">
             <h1>REGISTRO</h1>
-            <input type="text" placeholder="Nombre Completo">
-            <input type="email" placeholder="Correo Electronico">
-            <input type="password" placeholder="Contraseña">
-            <input type="password" placeholder="Confirmar Contraseña">
+            <input type="text" placeholder="Nombre Completo" class="nombre">
+            <input type="text" placeholder="Nombre de Usuario" class="usuario">
+            <input type="email" placeholder="Correo Electronico" class="correo">
+            <input type="password" placeholder="Contraseña" class="contrasena">
+            <input type="password" placeholder="Confirmar Contraseña" class="confirmar">
             
             <!-- Cuadro de consentimiento de tratamiento de datos -->
             <div class="consentimiento">
@@ -29,4 +30,5 @@
         </div>
     </div>
 </body>
+<script src="/js/usuarios.js"></script>
 </html>
