--- a/src/views/views.panel.ejs
+++ b/src/views/views.panel.ejs
@@ -41,96 +41,36 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class="table-active">
-                                <td>Juan</td>
-                                <td>Pérez</td>
-                                <td>555-1234</td>
-                                <td>****</td>
-                                <td>
-                                    <select class="form-select">
-                                        <option value="">Técnico</option>
-                                        <option value="">Secretaria</option>
-                                        <option value="">Cliente</option>
-                                        <option value="Administrador" selected>Programador</option>
-                                    </select>
-                                </td>
-                                <td>Activo</td>
-                                <td>
-                                    <div class="btn-group" role="group">
-                                        <button style="background-color: black;" type="button" class="btn btn-key btn-sm btn-custom btn-group-custom" data-bs-toggle="modal" data-bs-target="#permissionsModal">
-                                            <i class="fa-solid fa-key"></i>
-                                        </button>
-                                        <button style="background-color: blue;" type="button" class="btn btn-edit btn-sm">
-                                            <i class="fa-solid fa-pen"></i>
-                                        </button>
-                                        <button style="background-color: red;" type="button" class="btn btn-delete btn-sm">
-                                            <i class="fa-solid fa-trash"></i>
-                                        </button>
-                                    </div>
-                                </td>
-                            </tr>
-    
-                            </tr>
-                            <tr>
-                                <td>María</td>
-                                <td>González</td>
-                                <td>555-5678</td>
-                                <td>****</td>
-                                <td>
-                                    <select class="form-select">
-                                        <option value="">Técnico</option>
-                                        <option value="">Secretaria</option>
-                                        <option value="">Cliente</option>
-                                        <option value="Administrador" selected>Programador</option>
-                                    </select>
-                                </td>
-                                <td>Inactivo</td>
-                                <td>
-                                    <div class="btn-group" role="group">
-                                        <button style="background-color: black;" type="button" class="btn btn-key btn-sm btn-custom btn-group-custom" data-bs-toggle="modal" data-bs-target="#permissionsModal">
-                                            <i class="fa-solid fa-key"></i>
-                                        </button>
-                                        <button style="background-color: blue;" type="button" class="btn btn-edit btn-sm">
-                                            <i class="fa-solid fa-pen"></i>
-                                        </button>
-                                        <button style="background-color: red;" type="button" class="btn btn-delete btn-sm">
-                                            <i class="fa-solid fa-trash"></i>
-                                        </button>
-                                    </div>
-                                </td>
-                            </tr>
-    
-                            </tr>
-                            <tr>
-                                <td>Carlos</td>
-                                <td>López</td>
-                                <td>555-9876</td>
-                                <td>****</td>
-                                <td>
-                                    <select class="form-select">
-                                        <option value="">Técnico</option>
-                                        <option value="">Secretaria</option>
-                                        <option value="">Cliente</option>
-                                        <option value="Administrador" selected>Programador</option>
-                                    </select>
-                                </td>
-                                <td>Activo</td>
-                                <td>
-                                    <div class="btn-group" role="group">
-                                        <button style="background-color: black;" type="button" class="btn btn-key btn-sm btn-custom btn-group-custom" data-bs-toggle="modal" data-bs-target="#permissionsModal">
-                                            <i class="fa-solid fa-key"></i>
-                                        </button>
-                                        <button style="background-color: blue;" type="button" class="btn btn-edit btn-sm">
-                                            <i class="fa-solid fa-pen"></i>
-                                        </button>
-                                        <button style="background-color: red;" type="button" class="btn btn-delete btn-sm">
-                                            <i class="fa-solid fa-trash"></i>
-                                        </button>
-                                    </div>
-                                </td>
-                            </tr>
-    
-                            </tr>
+                            <% users.body.forEach(user => { %>
+                                <tr class="table-active">
+                                    <td><%= user.Nombre.split(' ')[0] %></td> 
+                                    <td><%= user.Nombre.split(' ')[1] || '' %></td> 
+                                    <td><%= user.Correo %></td> 
+                                    <td>****</td> 
+                                    <td>    
+                                        <select class="form-select">
+                                            <option value="Usuario" <%= user.Rol === 'Usuario' ? 'selected' : '' %>>Usuario</option>
+                                            <option value="Invitado" <%= user.Rol === 'Invitado' ? 'selected' : '' %>>Invitado</option>
+                                            <option value="Moderador" <%= user.Rol === 'Moderador' ? 'selected' : '' %>>Moderador</option>
+                                            <option value="Administrador" <%= user.Rol === 'Administrador' ? 'selected' : '' %>>Administrador</option>
+                                        </select>
+                                    </td>
+                                    <td><%= user.Estado %></td> <!-- Estado -->
+                                    <td>
+                                        <div class="btn-group" role="group">
+                                            <button style="background-color: black;" type="button" class="btn btn-key btn-sm btn-custom btn-group-custom" data-bs-toggle="modal" data-bs-target="#permissionsModal">
+                                                <i class="fa-solid fa-key"></i>
+                                            </button>
+                                            <button style="background-color: blue;" type="button" class="btn btn-edit btn-sm">
+                                                <i class="fa-solid fa-pen"></i>
+                                            </button>
+                                            <button style="background-color: red;" type="button" class="btn btn-delete btn-sm">
+                                                <i class="fa-solid fa-trash"></i>
+                                            </button>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <% }); %>
                         </tbody>
                     </table>
                 </div>
@@ -256,10 +196,19 @@
             </div>
         </div>
     </div>
+    <input type="text" hidden value="<%= url %>" class="id">
 </div>
     <script src="/js/botones.js"></script>  
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
     <script src="/js/dropdown-panel.js"></script>
+    <script>
+        const url = document.querySelector(".id").value
+        localStorage.setItem("url", url)
+        const btnAdd = document.querySelector(".agregar")
+        btnAdd.addEventListener("click", () => {
+            window.location.href = "/registro"
+        })
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
