--- a/src/public/css/contrasena.css
+++ b/src/public/css/contrasena.css
@@ -1,5 +1,6 @@
 * {
     margin: 0;
+    font-family: Arial, sans-serif;
     padding: 0;
 }
 
@@ -29,11 +30,10 @@
     width: 100%;
     height: 100%;
     background-color: #ffffff;
-    border-bottom: solid 2px gray;
 }
 
 .container_texto {
-    width: 100%;
+    width: 100%;    
     height: 100%;
     display: flex;
     justify-content: start;
@@ -54,8 +54,8 @@
 }
 
 .container_contenido_formulario {
-    width: 80%;
-    height: 85%;
+    width: 75%;
+    height: 80%;
     background-color: #D9D9D9;
     border-radius: 15px;
     display: grid;
@@ -69,8 +69,13 @@
     grid-row: 2;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr 1fr;
-    padding-left: 50px;
+    padding-left: 100px;
     font-weight: bold;
+    font-size: 20px;
+}
+
+.container_span span:last-child {
+    padding-top: 40px;
 }
 
 .container_input {
@@ -81,18 +86,24 @@
 }
 
 input {
-    width: 80%;
+    width: 70%;
     height: 40px;
     border-radius: 4px;
     border: none;
     outline: none;
-    padding-left: 5px;
+    padding-left: 10px;
+    font-size: 1em;
 }
 
-input:focus{
+input:focus {
     box-shadow: 0 0 10px rgb(90, 120, 255);
 }
 
+#password-strength {
+    margin-top: 5px;
+    font-size: 14px;
+    font-weight: bold;
+}
 
 .container_contenido_botones {
     display: flex;
@@ -102,29 +113,32 @@ input:focus{
 }
 
 .btn-cancelar {
-    width: 80px;
-    height: 30px;
-    background-color: white;
-    color: black;
+    background-color: #ffffff;
+    color: #333;
     border: none;
-    border-radius: 5px;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-right: 10px;
+    height: 40px;
+    font-size: 15px;
 }
 
-.btn-cancelar:hover{
-    background-color: rgb(195, 195, 195);
+.btn-cancelar:hover {
+    opacity: 0.8;
 }
 
 .btn-save {
-    width: 80px;
-    height: 30px;
-    background-color: #1E3DEA;
+    background-color: #3366cc;
     color: white;
     border: none;
-    border-radius: 5px;
-    margin-left: 8px;
+    padding: 10px 30px;
+    border-radius: 4px;
+    cursor: pointer;
+    height: 40px;
+    font-size: 15px;
 }
 
-.btn-save:hover{
-    background-color: rgb(195, 195, 195);
-    color: black;
+.btn-save:hover {
+    opacity: 0.8;
 }
