creacion de vista eliminación de su cuenta y datos asociados

--- a/src/views/views.preguntas.seguridad.ejs
+++ b/src/views/views.preguntas.seguridad.ejs
@@ -60,83 +60,84 @@
                     </span>
                 </div>
             </button>
-    <header>
-        
-        <div class="title">
-            <!-- FLECHA -->
-            <div class="arrow">
-                <button class="button">
-                    <div class="button-box">
-                        <span class="button-elem">
-                            <svg viewBox="0 0 46 40" xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M46 20.038c0-.7-.3-1.5-.8-2.1l-16-17c-1.1-1-3.2-1.4-4.4-.3-1.2 1.1-1.2 3.3 0 4.4l11.3 11.9H3c-1.7 0-3 1.3-3 3s1.3 3 3 3h33.1l-11.3 11.9c-1 1-1.2 3.3 0 4.4 1.2 1.1 3.3.8 4.4-.3l16-17c.5-.5.8-1.1.8-1.9z">
-                                </path>
-                            </svg>
-                        </span>
-                        <span class="button-elem">
-                            <svg viewBox="0 0 46 40">
-                                <path
-                                    d="M46 20.038c0-.7-.3-1.5-.8-2.1l-16-17c-1.1-1-3.2-1.4-4.4-.3-1.2 1.1-1.2 3.3 0 4.4l11.3 11.9H3c-1.7 0-3 1.3-3 3s1.3 3 3 3h33.1l-11.3 11.9c-1 1-1.2 3.3 0 4.4 1.2 1.1 3.3.8 4.4-.3l16-17c.5-.5.8-1.1.8-1.9z">
-                                </path>
-                            </svg>
-                        </span>
+            <header>
+
+                <div class="title">
+                    <!-- FLECHA -->
+                    <div class="arrow">
+                        <button class="button">
+                            <div class="button-box">
+                                <span class="button-elem">
+                                    <svg viewBox="0 0 46 40" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M46 20.038c0-.7-.3-1.5-.8-2.1l-16-17c-1.1-1-3.2-1.4-4.4-.3-1.2 1.1-1.2 3.3 0 4.4l11.3 11.9H3c-1.7 0-3 1.3-3 3s1.3 3 3 3h33.1l-11.3 11.9c-1 1-1.2 3.3 0 4.4 1.2 1.1 3.3.8 4.4-.3l16-17c.5-.5.8-1.1.8-1.9z">
+                                        </path>
+                                    </svg>
+                                </span>
+                                <span class="button-elem">
+                                    <svg viewBox="0 0 46 40">
+                                        <path
+                                            d="M46 20.038c0-.7-.3-1.5-.8-2.1l-16-17c-1.1-1-3.2-1.4-4.4-.3-1.2 1.1-1.2 3.3 0 4.4l11.3 11.9H3c-1.7 0-3 1.3-3 3s1.3 3 3 3h33.1l-11.3 11.9c-1 1-1.2 3.3 0 4.4 1.2 1.1 3.3.8 4.4-.3l16-17c.5-.5.8-1.1.8-1.9z">
+                                        </path>
+                                    </svg>
+                                </span>
+                            </div>
+                        </button>
+
                     </div>
-                </button>
-    
-            </div>
-            <center>
-                <h1>Preguntas de seguridad</h1>
-            <p>Tus preguntas de seguridad ayudan a mantener tu cuenta segura. Puede usarlos para restablecer su
-                contraseña
-            </p>
-        </center>
-        </div>
-
-        <form class="blue-box">
-            <h3>¿Cuál fue tu primer proyecto o tarea en esta empresa?</h3>
-            <div class="form-group">
-                <label for="first-project">Respuesta</label>
-                <input type="text" id="first-project" name="first-project">
-            </div>
-
-            <h3>¿Cuál fue el nombre de tu primera capacitación o curso en esta empresa?</h3>
-            <div class="form-group">
-                <label for="first-training">Respuesta</label>
-                <input type="text" id="first-training" name="first-training">
-            </div>
-            <div class="buttons">
-                <button type="" class="button1">Agregar otra pregunta</button>
-                <button type="" class="button2">Guardar cambios</button>
-            </div>
-        </form>
-
-    </header>
-
-    <!-- Modal Structure -->
-    <div id="questionModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Agregar nueva pregunta</h2>
-            <form id="modalForm">
-                <div class="form-group">
-                    <div class="inputGroup">
-                        <input type="text" required="" autocomplete="off">
-                        <label for="name">Escribe tu pregunta:</label>
-                    </div>
+                    <center>
+                        <h1>Preguntas de seguridad</h1>
+                        <p>Tus preguntas de seguridad ayudan a mantener tu cuenta segura. Puede usarlos para restablecer
+                            su
+                            contraseña
+                        </p>
+                    </center>
                 </div>
-                <div class="form-group">
-                    <div class="inputGroup">
-                        <input type="text" required="" autocomplete="off">
-                        <label for="name">Escribe tu respuesta:</label>
-                    </div>
-                </div>
-                <button type="submit" class="button2">Guardar</button>
-            </form>
-        </div>
-    </div>
 
-    <script src="/js/preguntas.seguridad.js"></script>
+                <form class="blue-box">
+                    <h3>¿Cuál fue tu primer proyecto o tarea en esta empresa?</h3>
+                    <div class="form-group">
+                        <label for="first-project">Respuesta</label>
+                        <input type="text" id="first-project" name="first-project">
+                    </div>
+
+                    <h3>¿Cuál fue el nombre de tu primera capacitación o curso en esta empresa?</h3>
+                    <div class="form-group">
+                        <label for="first-training">Respuesta</label>
+                        <input type="text" id="first-training" name="first-training">
+                    </div>
+                    <div class="buttons">
+                        <button type="" class="button1">Agregar otra pregunta</button>
+                        <button type="" class="button2">Guardar cambios</button>
+                    </div>
+                </form>
+
+            </header>
+
+            <!-- Modal Structure -->
+            <div id="questionModal" class="modal">
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <h2>Agregar nueva pregunta</h2>
+                    <form id="modalForm">
+                        <div class="form-group">
+                            <div class="inputGroup">
+                                <input type="text" required="" autocomplete="off">
+                                <label for="name">Escribe tu pregunta:</label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="inputGroup">
+                                <input type="text" required="" autocomplete="off">
+                                <label for="name">Escribe tu respuesta:</label>
+                            </div>
+                        </div>
+                        <button type="submit" class="button2">Guardar</button>
+                    </form>
+                </div>
+            </div>
+
+            <script src="/js/preguntas.seguridad.js"></script>
 </body>
 
 </html>
