--- a/src/public/css/styleco.css
+++ b/src/public/css/styleco.css
@@ -58,7 +58,7 @@ th{
     padding-top: 20px; 
 }
 .t1{
-    width: 50px;
+    width: 10%;
     height: 40px;
     background-color: rgb(214, 214, 214);
 }
