--- a/src/views/views.condicionesc.ejs
+++ b/src/views/views.condicionesc.ejs
@@ -15,39 +15,48 @@
             <div class="content col-md-10" id="section1">
                 <div class="">
                     <div class="fw-bold mt-3">Duración de los Tokens</div>
-                <div class="d-flex mt-3">
-                    <input type="number" class="form-control me-2" placeholder="1" id="tiempoT" style="width: 10%;">
-                    <select class="form-select" id="medidaT" style="width: 10%;">
-                        <option value="m">Minutos</option>
-                        <option value="h">Horas</option>
-                        <option value="d">Días</option>
-                        <option value="w">Semanas</option>
-                        <option value="y">Años</option>
-                    </select>
-                </div>
+                    <div class="d-flex mt-3">
+                        <input type="number" class="form-control me-2" placeholder="1" id="tiempoT" style="width: 10%;" value="<%= politicas.body[0].duracion_token.match(/\d+/)[0] %>">
+                        <select class="form-select" id="medidaT" style="width: 10%;">
+                            <option value="m" <%= politicas.body[0].duracion_token.includes('m') ? 'selected' : '' %>>Minutos</option>
+                            <option value="h" <%= politicas.body[0].duracion_token.includes('h') ? 'selected' : '' %>>Horas</option>
+                            <option value="d" <%= politicas.body[0].duracion_token.includes('d') ? 'selected' : '' %>>Días</option>
+                            <option value="w" <%= politicas.body[0].duracion_token.includes('w') ? 'selected' : '' %>>Semanas</option>
+                            <option value="y" <%= politicas.body[0].duracion_token.includes('y') ? 'selected' : '' %>>Años</option>
+                        </select>
+                    </div>
+
                     <div class="fw-bold mt-3">Frecuencia Copia de Seguridad</div>
-                    <input type="text" class="t3 mx-auto px-3 rounded border-0 mt-3" placeholder="Semanal" >
+                    <div class="d-flex mt-3">
+                        <select class="form-select" id="frecuenciaCS" style="width: 20%;">
+                            <option value="Diaria" <%= politicas.body[0].frecuencia_copia_seguridad === 'Diaria' ? 'selected' : '' %>>Diaria</option>
+                            <option value="Semanal" <%= politicas.body[0].frecuencia_copia_seguridad === 'Semanal' ? 'selected' : '' %>>Semanal</option>
+                            <option value="Mensual" <%= politicas.body[0].frecuencia_copia_seguridad === 'Mensual' ? 'selected' : '' %>>Mensual</option>
+                            <option value="Anual" <%= politicas.body[0].frecuencia_copia_seguridad === 'Anual' ? 'selected' : '' %>>Anual</option>
+                        </select>
+                    </div>
+
                     <div class="fw-bold mt-3">Complejidad de las Contraseñas</div>
-                        <div class="col d-flex">
-                            <div class="mt-4">Cantidad de Caracteres</div>
-                            <input type="text" class="t1 px-3 rounded border-0 mx-3 mt-3" id="cantC" placeholder="1">
-                        </div>
-                        <div class="col d-flex">
-                            <div class="mt-4">Cantidad Mínima de Minúsculas</div>
-                            <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" id="" placeholder="1" id="cantMin">
-                        </div>
-                        <div class="col d-flex">
-                            <div class="mt-4">Cantidad Mínima de Mayúsculas</div>
-                            <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="1" id="cantMay">
-                        </div>
-                        <div class="col d-flex">
-                            <div class="mt-4">Cantidad Mínima de Números</div>
-                            <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="1" id="cantNum">
-                        </div>
-                        <div class="col d-flex">
-                            <div class="mt-4">Cantidades Especiales</div>
-                            <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="1" id="cantEsp">
-                        </div>
+                    <div class="col d-flex">
+                        <div class="mt-4">Cantidad de Caracteres</div>
+                        <input type="number" class="t1 px-3 rounded border-0 mx-3 mt-3" id="cantC" placeholder="1" value="<%= politicas.body[0].longitud_minima_contrasena %>">
+                    </div>
+                    <div class="col d-flex">
+                        <div class="mt-4">Cantidad Mínima de Minúsculas</div>
+                        <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="1" id="cantMin">
+                    </div>
+                    <div class="col d-flex">
+                        <div class="mt-4">Cantidad Mínima de Mayúsculas</div>
+                        <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="1" id="cantMay">
+                    </div>
+                    <div class="col d-flex">
+                        <div class="mt-4">Cantidad Mínima de Números</div>
+                        <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="1" id="cantNum">
+                    </div>
+                    <div class="col d-flex">
+                        <div class="mt-4">Cantidades Especiales</div>
+                        <input type="text" class="mt-3 t1 px-3 rounded border-0 mx-3" placeholder="1" id="cantEsp">
+                    </div>
                 </div>
 
                 <div class="d-flex-end mt-5">
