--- a/src/views/views.dispositivos.movil.ejs
+++ b/src/views/views.dispositivos.movil.ejs
@@ -13,11 +13,124 @@
 </head>
 <body class="devices_movil container-fluid h-100">
     <!-- partial navbar -->
-     <%- include("partials/partial.navbar.usuarios.ejs") %>
+    <%- include("partials/partial.navbar.usuarios.ejs") %>
+
+    <div class="devices_movil row">
+        <i class="devices_movil bi bi-arrow-left-short col-sm-1 col-md-1 col-lg-1 text-center display-6 pt-3"></i>
+        <p class="devices_movil h3 col-sm-10 col-md-9 col-lg-9 mt-1 p-3">Tus dispositivos</p>
+    </div>
     
-    <div class="devices_movil row"></div>
-    <div class="devices_movil row"></div>
-    
+    <div class="devices_movil row">
+        <p class="devices_movil h5 col-sm-5 col-md-5 col-lg-5 text-secondary mt-4 ms-3">Accediste a tu cuenta en estos dispositivos</p>
+    </div>
+
+    <div class="devices_movil row d-flex flex-wrap p-3">
+
+        <!-- un dispositivo  -->
+        <div class="devices_movil one_divice col-sm-12 col-md-3 col-lg-3 mt-4 mx-4">
+
+            <div class="devices_movil row border border-black rounded">
+
+                <div class="devices_movil icon-phone col-sm-3 col-md-3 col-lg-3 center">
+                    <i class="devices_movil bi bi-phone-fill display-4" ></i>
+                </div>
+
+                <div class="devices_movil col-sm-9 col-md-9 col-lg-9 p-0">
+                    <p class="devices_movil mt-3 fs-6 ">Android <br> Colombia</p>
+                    <div class="devices_movil center d-flex justify-content-between p-2">
+
+                        <div class="devices_movil col-sm-5 col-md-5 col-lg-5 m-0 rounded center" style="width: 45%; background: #D9D9D9;">
+                            <i class="devices_movil bi bi-box-arrow-left fs-6 me-2 text-primary" style="--bs-text-opacity: .5;"></i>
+                            <p class="devices_movil mt-2">Salir</p>
+                        </div>
+                        <div class="devices_movil col-sm-7 col-md-7 col-lg-7 rounded center" style="width: 45%; background: #D9D9D9;">
+                            <i class="devices_movil bi bi-check2-square fs-6 me-2"></i>
+                            <p class="devices_movil mt-2">Habilitar</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- un dispositivo  -->
+        <div class="devices_movil one_divice col-sm-12 col-md-3 col-lg-3 mt-4 mx-4">
+
+            <div class="devices_movil row border border-black rounded">
+
+                <div class="devices_movil icon-phone col-sm-3 col-md-3 col-lg-3 center">
+                    <i class="devices_movil bi bi-phone-fill display-4" ></i>
+                </div>
+
+                <div class="devices_movil col-sm-9 col-md-9 col-lg-9 p-0">
+                    <p class="devices_movil mt-3 fs-6 ">Android <br> Colombia</p>
+                    <div class="devices_movil center d-flex justify-content-between p-2">
+
+                        <div class="devices_movil col-sm-5 col-md-5 col-lg-5 m-0 rounded center" style="width: 45%; background: #D9D9D9;">
+                            <i class="devices_movil bi bi-box-arrow-left fs-6 me-2 text-primary" style="--bs-text-opacity: .5;"></i>
+                            <p class="devices_movil mt-2">Salir</p>
+                        </div>
+                        <div class="devices_movil col-sm-7 col-md-7 col-lg-7 rounded center" style="width: 45%; background: #D9D9D9;">
+                            <i class="devices_movil bi bi-check2-square fs-6 me-2"></i>
+                            <p class="devices_movil mt-2">Habilitar</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- un dispositivo  -->
+        <div class="devices_movil one_divice col-sm-12 col-md-3 col-lg-3 mt-4 mx-4">
+
+            <div class="devices_movil row border border-black rounded">
+
+                <div class="devices_movil icon-phone col-sm-3 col-md-3 col-lg-3 center">
+                    <i class="devices_movil bi bi-phone-fill display-4" ></i>
+                </div>
+
+                <div class="devices_movil col-sm-9 col-md-9 col-lg-9 p-0">
+                    <p class="devices_movil mt-3 fs-6 ">Android <br> Colombia</p>
+                    <div class="devices_movil center d-flex justify-content-between p-2">
+
+                        <div class="devices_movil col-sm-5 col-md-5 col-lg-5 m-0 rounded center" style="width: 45%; background: #D9D9D9;">
+                            <i class="devices_movil bi bi-box-arrow-left fs-6 me-2 text-primary" style="--bs-text-opacity: .5;"></i>
+                            <p class="devices_movil mt-2">Salir</p>
+                        </div>
+                        <div class="devices_movil col-sm-7 col-md-7 col-lg-7 rounded center" style="width: 45%; background: #D9D9D9;">
+                            <i class="devices_movil bi bi-check2-square fs-6 me-2"></i>
+                            <p class="devices_movil mt-2">Habilitar</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- un dispositivo  -->
+        <div class="devices_movil one_divice col-sm-12 col-md-3 col-lg-3 mt-4 mx-4">
+
+            <div class="devices_movil row border border-black rounded">
+
+                <div class="devices_movil icon-phone col-sm-3 col-md-3 col-lg-3 center">
+                    <i class="devices_movil bi bi-phone-fill display-4" ></i>
+                </div>
+
+                <div class="devices_movil col-sm-9 col-md-9 col-lg-9 p-0">
+                    <p class="devices_movil mt-3 fs-6 ">Android <br> Colombia</p>
+                    <div class="devices_movil center d-flex justify-content-between p-2">
+
+                        <div class="devices_movil col-sm-5 col-md-5 col-lg-5 m-0 rounded center" style="width: 45%; background: #D9D9D9;">
+                            <i class="devices_movil bi bi-box-arrow-left fs-6 me-2 text-primary" style="--bs-text-opacity: .5;"></i>
+                            <p class="devices_movil mt-2">Salir</p>
+                        </div>
+                        <div class="devices_movil col-sm-7 col-md-7 col-lg-7 rounded center" style="width: 45%; background: #D9D9D9;">
+                            <i class="devices_movil bi bi-check2-square fs-6 me-2"></i>
+                            <p class="devices_movil mt-2">Habilitar</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 
     
 
