Solucion cagada de jhoan

--- a/src/views/views.login.ejs
+++ b/src/views/views.login.ejs
@@ -13,7 +13,7 @@
                 <h1>BIENVENIDO A ERP</h1>
                 <input type="text" placeholder="Ingrese su usuario" id="usuario" required>
                 <input type="password" placeholder="Ingrese su contraseña" id="contrasena" required>
-                <button class="boton" type="submit" onclick="login()">Ingresar</button>
+                <button class="boton" type="submit">Ingresar</button>
                 <p>Recuperar usuario <a href="/correo">AQUI</a></p>
                 <p>Recuperar contraseña <a href="/recuperarClave">AQUI</a></p>
 
@@ -29,8 +29,8 @@
                 </div>
             </form>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script src="./js/iniciologin.js"></script>
+        <input type="hidden" value="<%= url %>" id="url">
     </body>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/js/login.js"></script>
 </html>
